--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <p class="alert"><%= alert %></p>
     <div>
       <% if user_signed_in? %>
+        <%= link_to "New Post", new_blog_post_path %>
         <%= link_to "Profile", edit_user_registration_path %>
         <%= button_to "Log Out", destroy_user_session_path, method: :delete %>
       <% else %>
