--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
+  <body class="prose mx-auto">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <div>
